--- a/detail/detail.html
+++ b/detail/detail.html
@@ -8,20 +8,17 @@
       src="https://kit.fontawesome.com/9be338970f.js"
       crossorigin="anonymous"
     ></script>
-    <!-- FontAwesome -->
-    <script
-      src="https://kit.fontawesome.com/9be338970f.js"
-      crossorigin="anonymous"
-    ></script>
     <!-- custom CSS & JS -->
     <link rel="stylesheet" href="./styles/detail.css" />
     <script defer src="./js/script.js"></script>
+    <!-- Media Screen -->
+    <link rel="stylesheet" href="./styles/res_detail.css" />
     <!-- domain icon -->
     <link rel="icon" type="images/png" href="../logo/logo.png" />
     <title>상세페이지</title>
   </head>
   <body>
-    <header>
+    <header style="display: none">
       <div class="header_event">
         <p>
           지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
@@ -58,7 +55,7 @@
           </div>
         </div>
         <div class="header_inner_logo">
-          <img src="./detail_imgs/logo.png" alt="logo" />
+          <img src="../imgs/logo.png" alt="logo" />
         </div>
       </div>
     </header>
@@ -66,8 +63,9 @@
       <!-- 상품 기본 정보 -->
       <section class="detail_info">
         <figure class="info_img">
-          <img src="https://placehold.co/560x560" alt="placehold" />
+          <img src="./imgs/img8.png" alt="img1" />
         </figure>
+
         <article class="img_info">
           <div class="info_title">
             <h1>유기농 찰토마토 2kg</h1>
@@ -128,7 +126,9 @@
           </div>
         </article>
       </section>
-      <hr class="detail_line" />
+
+      <div class="detail_line"></div>
+
       <!-- 리뷰 섹션 -->
       <section class="detail_review">
         <div class="detail_content">
@@ -147,7 +147,7 @@
                 <span>★★★★★</span>
               </p>
               <div class="member_content">
-                <img src="https://placehold.co/100x100" alt="리뷰 이미지" />
+                <img src="./imgs/img1.png" alt="img1" />
                 <div>
                   <span>
                     못난이들도 있긴 하지만.. 전체적으로 너무 이뻐요!! 이런
@@ -168,7 +168,7 @@
                 <span>★★★★☆</span>
               </p>
               <div class="member_content">
-                <img src="https://placehold.co/100x100" alt="리뷰 이미지" />
+                <img src="./imgs/img2.png" alt="img2" />
                 <div>
                   <span>
                     다들 너무 싱싱하고 좋았어요. 못난이가 어디있나 찾아도 못
@@ -187,12 +187,18 @@
           <button class="review_more">232건 리뷰 더 보기 ></button>
         </div>
       </section>
-      <hr class="detail_line" />
+      <div class="detail_line"></div>
       <!-- 상품 상세 섹션 -->
       <section class="detail_product">
         <div class="product_title">
           <h1>상품 설명</h1>
-          <img src="https://placehold.co/1050x683" alt="토마토 이미지" />
+          <img src="./imgs/img3.png" alt="img3" />
+          <div class="img_group">
+            <img src="./imgs/img4.png" alt="img4" />
+            <img src="./imgs/img5.png" alt="img5" />
+            <img src="./imgs/img6.png" alt="img6" />
+            <img src="./imgs/img7.png" alt="img7" />
+          </div>
         </div>
         <div class="product_thumb">
           <div class="thumb_one">
@@ -206,7 +212,7 @@
                 담아드리고 있어요.
               </span>
             </div>
-            <img src="https://placehold.co/200x200" alt="thumb" />
+            <img src="./imgs/img4.png" alt="thumb" />
           </div>
           <div class="thumb_one">
             <div>
@@ -220,7 +226,7 @@
                 알아봐주시길 부탁드립니다.
               </span>
             </div>
-            <img src="https://placehold.co/200x200" alt="thumb" />
+            <img src="./imgs/img5.png" alt="thumb" />
           </div>
           <div class="thumb_one">
             <div>
@@ -234,7 +240,7 @@
                 매일 새벽 수확해 당일 출고를 원칙으로 합니다.
               </span>
             </div>
-            <img src="https://placehold.co/200x200" alt="thumb" />
+            <img src="./imgs/img6.png" alt="thumb" />
           </div>
           <div class="thumb_one">
             <div>
@@ -251,11 +257,11 @@
                 도와드려요.
               </span>
             </div>
-            <img src="https://placehold.co/200x200" alt="thumb" />
+            <img src="./imgs/img7.png" alt="thumb" />
           </div>
         </div>
       </section>
-      <hr class="detail_line" />
+      <div class="detail_line"></div>
       <!-- 문의 섹션 -->
       <section class="detail_faq">
         <div class="faq_title">
@@ -279,31 +285,31 @@
         <table class="faq_table">
           <tr>
             <td class="left">배송 관련 문의 <i class="fas fa-lock"></i></td>
-            <td class="right">이*일</td>
+            <td class="right faq_name">이*일</td>
             <td class="right faq_date">2025.03.15</td>
             <td class="right faq_comple">답변완료</td>
           </tr>
           <tr>
             <td class="left">상품 상태 문의 <i class="fas fa-lock"></i></td>
-            <td class="right">송*관</td>
+            <td class="right faq_name">송*관</td>
             <td class="right faq_date">2025.02.02</td>
             <td class="right faq_comple">답변완료</td>
           </tr>
           <tr>
             <td class="left">환불 가능 여부 <i class="fas fa-lock"></i></td>
-            <td class="right">최*연</td>
+            <td class="right faq_name">최*연</td>
             <td class="right faq_date">2025.01.13</td>
             <td class="right">답변대기</td>
           </tr>
           <tr>
             <td class="left">환불 가능 여부 <i class="fas fa-lock"></i></td>
-            <td class="right">장*아</td>
+            <td class="right faq_name">장*아</td>
             <td class="right faq_date">2025.01.12</td>
             <td class="right faq_comple">답변완료</td>
           </tr>
           <tr>
             <td class="left">환불 가능 여부 <i class="fas fa-lock"></i></td>
-            <td class="right">박*진</td>
+            <td class="right faq_name">박*진</td>
             <td class="right faq_date">2024.12.23</td>
             <td class="right">답변대기</td>
           </tr>
@@ -316,13 +322,12 @@
           <div>5</div>
         </div>
       </section>
-      <hr class="detail_line" />
       <!-- 보상정책 -->
       <section class="detail_policy">
         <div class="policy_title">
           <h1>사고보상정책</h1>
-          <p>
-            받아보신 상품에 이상이 있으신가요? 아래 절차에 따라 요청을
+          <p class="title_te">
+            받아보신 상품에 이상이 있으신가요? <br />아래 절차에 따라 요청을
             남겨주시면 빠르게 도와드리겠습니다.
           </p>
         </div>
@@ -431,7 +436,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer style="display: none">
       <div class="footer_inner">
         <div class="footer_inner_left">
           <img src="./detail_imgs/logo_02.png" alt="logo_02" />
