--- a/detail/detail.html
+++ b/detail/detail.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/9be338970f.js"
       crossorigin="anonymous"
     ></script>
-    <!-- custom CSS & JS -->
+    <!-- custom CSS & detail/header/footer JS -->
     <link rel="stylesheet" href="./styles/detail.css" />
     <script defer src="./js/detail.js"></script>
     <script defer src="../common.js"></script>
@@ -157,51 +157,143 @@
             <span class="star">평균 별점</span>
             <span class="rating"><span class="rating_one">4.2</span> / 5</span>
           </div>
-          <div class="review_member">
-            <div>
-              <p>
-                김 * 연
-                <span>★★★★★</span>
-              </p>
-              <div class="member_content">
-                <img src="./imgs/img1.png" alt="img1" />
-                <div>
-                  <span>
-                    못난이들도 있긴 하지만.. 전체적으로 너무 이뻐요!! 이런
-                    상품들이 선택받지 못하고 버려진다는게 너무 마음아프네요..😢
-                    배송도 빠르고 상품이 너무 좋아요!! 정기배송 시켜볼
-                    생각이에요!!
-                  </span>
-                  <p>
-                    2025.03.10 |
-                    <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
-                  </p>
+          <div class="members">
+            <div class="review_member">
+              <div>
+                <p>
+                  김 * 연
+                  <span>★★★★★</span>
+                </p>
+                <div class="member_content">
+                  <img src="./imgs/img1.png" alt="img1" />
+                  <div>
+                    <span>
+                      못난이들도 있긴 하지만.. 전체적으로 너무 이뻐요!! 이런
+                      상품들이 선택받지 못하고 버려진다는게 너무
+                      마음아프네요..😢 배송도 빠르고 상품이 너무 좋아요!!
+                      정기배송 시켜볼 생각이에요!!
+                    </span>
+                    <p>
+                      2025.03.10 |
+                      <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <p>
+                  이 * 진
+                  <span>★★★★☆</span>
+                </p>
+                <div class="member_content">
+                  <img src="./imgs/img2.png" alt="img2" />
+                  <div>
+                    <span>
+                      다들 너무 싱싱하고 좋았어요. 못난이가 어디있나 찾아도 못
+                      찾겠어요. ^^ 샐러드 박스는 저에게 주는 선물 같은 정기배송
+                      시켜봤는데 선한데 감자도 달달포슬한 편이고 버섯도 세가지
+                      종류나
+                    </span>
+                    <p>
+                      2025.01.02 |
+                      <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
-            <div>
-              <p>
-                이 * 진
-                <span>★★★★☆</span>
-              </p>
-              <div class="member_content">
-                <img src="./imgs/img2.png" alt="img2" />
+            <div class="hide_members">
+              <div class="review_member">
                 <div>
-                  <span>
-                    다들 너무 싱싱하고 좋았어요. 못난이가 어디있나 찾아도 못
-                    찾겠어요. ^^ 샐러드 박스는 저에게 주는 선물 같은 정기배송
-                    시켜봤는데 선한데 감자도 달달포슬한 편이고 버섯도 세가지
-                    종류나
-                  </span>
                   <p>
-                    2025.01.02 |
-                    <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
+                    김 * 연
+                    <span>★★★★★</span>
                   </p>
+                  <div class="member_content">
+                    <img src="./imgs/img1.png" alt="img1" />
+                    <div>
+                      <span>
+                        못난이들도 있긴 하지만.. 전체적으로 너무 이뻐요!! 이런
+                        상품들이 선택받지 못하고 버려진다는게 너무
+                        마음아프네요..😢 배송도 빠르고 상품이 너무 좋아요!!
+                        정기배송 시켜볼 생각이에요!!
+                      </span>
+                      <p>
+                        2025.03.10 |
+                        <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <p>
+                    이 * 진
+                    <span>★★★★☆</span>
+                  </p>
+                  <div class="member_content">
+                    <img src="./imgs/img2.png" alt="img2" />
+                    <div>
+                      <span>
+                        다들 너무 싱싱하고 좋았어요. 못난이가 어디있나 찾아도 못
+                        찾겠어요. ^^ 샐러드 박스는 저에게 주는 선물 같은
+                        정기배송 시켜봤는데 선한데 감자도 달달포슬한 편이고
+                        버섯도 세가지 종류나
+                      </span>
+                      <p>
+                        2025.01.02 |
+                        <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="review_member">
+                <div>
+                  <p>
+                    김 * 연
+                    <span>★★★★★</span>
+                  </p>
+                  <div class="member_content">
+                    <img src="./imgs/img1.png" alt="img1" />
+                    <div>
+                      <span>
+                        못난이들도 있긴 하지만.. 전체적으로 너무 이뻐요!! 이런
+                        상품들이 선택받지 못하고 버려진다는게 너무
+                        마음아프네요..😢 배송도 빠르고 상품이 너무 좋아요!!
+                        정기배송 시켜볼 생각이에요!!
+                      </span>
+                      <p>
+                        2025.03.10 |
+                        <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <p>
+                    이 * 진
+                    <span>★★★★☆</span>
+                  </p>
+                  <div class="member_content">
+                    <img src="./imgs/img2.png" alt="img2" />
+                    <div>
+                      <span>
+                        다들 너무 싱싱하고 좋았어요. 못난이가 어디있나 찾아도 못
+                        찾겠어요. ^^ 샐러드 박스는 저에게 주는 선물 같은
+                        정기배송 시켜봤는데 선한데 감자도 달달포슬한 편이고
+                        버섯도 세가지 종류나
+                      </span>
+                      <p>
+                        2025.01.02 |
+                        <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <button class="review_more">232건 리뷰 더 보기 ></button>
+          <button class="review_more">232건 리뷰 더 보기 ▼</button>
         </div>
       </section>
 
