--- a/eventpromotion/event.html
+++ b/eventpromotion/event.html
@@ -12,19 +12,35 @@
     <link rel="stylesheet" href="./styles/event.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
     <link rel="stylesheet" href="../styles/header.css" />
-    <script defer src="./js/script.js"></script>
+    <link rel="stylesheet" href="../styles/res_header.css" />
+    <link rel="stylesheet" href="./styles/res_event.css" />
+    <script defer src="./js/event.js"></script>
+    <script defer src="../common.js"></script>
     <title>Event page</title>
   </head>
   <body>
     <main id="event_page">
-      <header>
+      <header id="header">
         <div class="header_event">
-          <p>
-            지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
-            <i class="fa-solid fa-chevron-right"></i>
-          </p>
+          <p>이벤트 종료까지 | <b class="event_timer">5일 16 : 05 : 39</b></p>
         </div>
         <div class="header_inner">
+          <!-- trigger start -->
+          <nav>
+            <ul class="gnb">
+              <li><a href="#">과일</a></li>
+              <li><a href="#">채소</a></li>
+              <li><a href="#">가공식품/기타</a></li>
+              <li><a href="#">이벤트</a></li>
+            </ul>
+          </nav>
+          <div class="trigger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <!-- trigger end -->
+
           <div class="header_inner_left">
             <ul>
               <li>과일</li>
@@ -48,6 +64,7 @@
                 <input type="text" placeholder="검색어를 입력해주세요." />
                 <i class="fa-solid fa-magnifying-glass"></i>
               </div>
+              <i class="fa-solid fa-magnifying-glass res_magnify"></i>
               <div class="basket">
                 <i class="fa-solid fa-cart-shopping"> <p>3</p></i>
               </div>
@@ -77,23 +94,40 @@
               <img src="../imgs/Coin-4.png" alt="Coin-4" />
               <img src="../imgs/roulette_arr.png" alt="roulette_arr" />
               <img src="../imgs/event_titlesub.png" alt="" />
-              <img src="../imgs/event_roulette.png" alt="event_roulette" />
+              <img
+                id="event_roulette_bg"
+                src="../imgs/event_roulette.png"
+                alt="event_roulette"
+              />
             </div>
+            <button id="roulette_center">Start!</button>
             <div id="event_down_text">
               <div id="roulette_uparr">
                 <img src="../imgs/roulette_uparr.png" alt="roulette_uparr" />
               </div>
-              <span>룰렛 가운데 START 버튼을 눌러보세요</span>
+              <span>룰렛 가운데 버튼을 눌러보세요</span>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- modal after -->
+      <div id="event_modal_section">
+        <div id="event_before"></div>
+        <div id="event_modal">
+          <div id="modal_inner">
+            <h2><b id="modal_content">포인트</b>에 당첨되셨습니다!</h2>
+            <button id="modal_btn">확인</button>
+          </div>
+        </div>
+      </div>
 
       <!-- event middle plus -->
       <div id="event_middle_plus">
         <div class="middle_plus"></div>
         <div class="middle_plus"></div>
       </div>
+
       <!-- event product -->
       <section id="event_product">
         <div class="inner">
@@ -229,28 +263,32 @@
           <h4>꼭 읽어주세요</h4>
           <p>
             • 본 이벤트는 농담 회원을 대상으로 진행됩니다.<br />• 추가 참여
-            기회는 아래의 경우에만 제공되므로 반드시 양지 부탁드립니다.<br /><span
-              class="space"
-              >• </span
-            >1) 초대를 받은 친구가 기존 회원인 경우: 로그인 후 이벤트 참여까지
-            완료시 참여 기회 추가 제공<br /><span class="space">• </span>2)
-            초대를 받은 친구가 농담 회원이 아닌 경우: 공유 버튼을 눌러 복사된
-            링크를 통해<br />• 초대를 받은 대상자가 공유버튼을 눌러 복사된
-            링크를 통해 가입하지 않고, 이외 경로로 가입한 경우 추가 참여 기회는
-            인정되지 않습니다.<br />• 초대를 받은 대상자가 일반회원이 아닌
-            통합회원 SNS 회원으로 가입 시 추가 참여 기회는 인정되지 않습니다.<br />•
-            친구 초대로 최대 10번의 추가 참여 기회를 받을 수 있으나, 초대를 한
-            10명의 대상자는 모두 달라야 합니다.<br />• 지급된 포인트는
-            [마이페이지] - [혜택이벤트]에서 확인하실 수 있습니다.<br />• 지급된
-            포인트는 타인에게 양도할 수 없으며, 유효기간이 만료되는 경우 사용이
-            불가합니다.<br />• 정상적인 방법으로 참여하지 않았음이 확인된 경우,
-            혜택 지급은 제한되며 지급된 혜택은 회수됩니다.
+            기회는 아래의 경우에만 제공되므로 반드시 양지 부탁드립니다.<br />1)
+            초대를 받은 친구가 기존 회원인 경우: 로그인 후 이벤트 참여까지
+            완료시 참여 기회 추가 제공<br />2) 초대를 받은 친구가 농담 회원이
+            아닌 경우 공유 버튼 링크를 통해.<br />• 초대를 받은 대상자가
+            일반회원이 아닌 통합회원 SNS 회원으로 가입 시 추가 참여 기회는
+            인정되지 않습니다.<br />• 친구 초대로 최대 10번의 추가 참여 기회를
+            받을 수 있으나, 초대를 한 10명의 대상자는 모두 달라야 합니다.<br />•
+            지급된 포인트는 [마이페이지] - [혜택이벤트]에서 확인하실 수
+            있습니다.<br />• 지급된 포인트는 타인에게 양도할 수 없으며,
+            유효기간이 만료되는 경우 사용이 불가합니다.<br />• 정상적인 방법으로
+            참여하지 않았음이 확인된 경우, 혜택 지급은 제한되며 지급된 혜택은
+            회수됩니다.
           </p>
         </div>
       </section>
 
       <footer>
         <div class="footer_inner">
+          <div class="up_btn">
+            <a href="#header">
+              <div class="up_arrow_container">
+                <i class="fas fa-chevron-up"></i>
+              </div>
+            </a>
+          </div>
+
           <div class="footer_inner_left">
             <img src="../imgs/logo_02.png" alt="logo_02" />
             <p>ⓒ 농담 All rights reserved</p>
