--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- custom CSS & JS-->
     <link rel="stylesheet" href="style.css" />
     <script defer src="./script.js"></script>
+    <script defer src="../common.js"></script>
     <!-- responsive CSS -->
     <link rel="stylesheet" href="./res_style.css" />
     <!-- domain icon -->
@@ -25,7 +26,7 @@
     <title>main</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="header_event">
         <p>
           지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
@@ -33,6 +34,22 @@
         </p>
       </div>
       <div class="header_inner">
+        <!-- trigger start -->
+        <nav>
+          <ul class="gnb">
+            <li><a href="#">과일</a></li>
+            <li><a href="#">채소</a></li>
+            <li><a href="#">가공식품/기타</a></li>
+            <li><a href="#">이벤트</a></li>
+          </ul>
+        </nav>
+        <div class="trigger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <!-- trigger end -->
+
         <div class="header_inner_left">
           <ul>
             <li>과일</li>
@@ -56,13 +73,14 @@
               <input type="text" placeholder="검색어를 입력해주세요." />
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
+            <i class="fa-solid fa-magnifying-glass res_magnify"></i>
             <div class="basket">
               <i class="fa-solid fa-cart-shopping"> <p>3</p></i>
             </div>
           </div>
         </div>
-        <div class="header_inner_logo">
-          <img src="./imgs/logo.png" alt="logo" />
+        <div class="header_inner_logo" id="header_logo">
+          <img src="../imgs/logo.png" alt="logo" />
         </div>
       </div>
     </header>
@@ -840,8 +858,16 @@
     </main>
     <footer>
       <div class="footer_inner">
+        <div class="up_btn">
+          <a href="#header">
+            <div class="up_arrow_container">
+              <i class="fas fa-chevron-up"></i>
+            </div>
+          </a>
+        </div>
+
         <div class="footer_inner_left">
-          <img src="./imgs/logo_02.png" alt="logo_02" />
+          <img src="../imgs/logo_02.png" alt="logo_02" />
           <p>ⓒ 농담 All rights reserved</p>
         </div>
         <div class="footer_inner_center">
